Added save & delete functionality
